№10. Implemented text conversion in latin and added the app's instruction

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,28 @@
+aspy.yaml==1.3.0
 certifi==2019.3.9
+cfgv==2.0.0
 chardet==3.0.4
+Click==7.0
 Django==2.2.2
 djangorestframework==3.9.4
+filelock==3.0.12
+identify==1.4.4
 idna==2.8
+importlib-metadata==0.18
+lxml==4.3.4
+nodeenv==1.3.3
 pkg-resources==0.0.0
+pluggy==0.12.0
+pre-commit==1.17.0
+py==1.8.0
 pytz==2019.1
+PyYAML==5.1.1
 requests==2.22.0
 six==1.12.0
 sqlparse==0.3.0
+toml==0.10.0
+tox==3.12.1
 urllib3==1.25.3
+virtualenv==16.6.0
+yandex-translater==6.0
+zipp==0.5.1
